--- a/style.css
+++ b/style.css
@@ -522,7 +522,7 @@ section.top-off .title {
     margin-top: 50px;
 }
 .matn5 {
-    width: 65%;
+    width:100%;
     height: 100px;
    /* border: 1px solid darkred;*/
     margin: 0 auto;
@@ -551,7 +551,7 @@ section.top-off .title {
 
 .matn5 a {
     text-decoration: none;
-    font-size: 25px;
+    font-size: 22px;
     font-weight: bolder;
 
     margin-top: 35px;
@@ -577,7 +577,7 @@ section.top-off .title {
 
 .advantages li{
     width: 20%;
-   /* border: 1px solid saddlebrown;*/
+  /* border: 1px solid saddlebrown;*/
     height: 155px;
 }
 
@@ -761,4 +761,8 @@ ul.simple-list>li>a:hover{
 
 .copyright p{
     font-family: 'iranyekan_numbers','iranyekan';
+}
+
+.a3 p{
+    margin-top: -5px;
 }
