--- a/style.css
+++ b/style.css
@@ -119,14 +119,14 @@ ul.uli li a{
     left: 15px;
 }
 h1 {
-    font: bold 48px/96px samim;
+
     font-size: 60px;
     color: white;
     margin-right: 115px;
     margin-top: 85px;
 }
 #p {
-    font: normal 18px/36px px samim;
+
     color: white;
     text-align: center;
     font-size: 25px;
@@ -143,7 +143,7 @@ h1 {
 .start-btn a{
     background: #fff;
     color: #333;
-    font: normal 18px/36px samim;
+
     display: inline-block;
     padding: 0 25px;
     height: 40px;
@@ -232,7 +232,7 @@ h1 {
 #h2{
     margin-top: 135px;
     margin-right: 75px;
-    font: bold 24px/1 samim;
+
     color: #252525;
     font-size: 40px;
 }
@@ -313,7 +313,7 @@ h1 {
 .pad span {
     display: inline-block;
     color: #fff;
-    font: bold 16px/34px samim;
+
     padding: 0 15px;
     border-radius: 100px;
     margin-right: 5px;
@@ -648,7 +648,7 @@ section.top-off .title {
     margin-right: -11px;
     background-image: url(anar-wow.png);
     background-position: center;
-    background-size: 106% auto;
+    background-size: 97% auto;
     background-repeat: no-repeat;
     right: 0;
 }
@@ -741,7 +741,7 @@ ul.simple-list>li>a:hover{
 
 .copyright {
     text-align: center;
-    font: bold 18px/36px samim;
+    font: bold 18px/36px;
     color: #333;
     padding-top: 200px;
 }
@@ -765,4 +765,8 @@ ul.simple-list>li>a:hover{
 
 .a3 p{
     margin-top: -5px;
+}
+
+.p6{
+    margin-top: 8px;
 }
