--- a/style.css
+++ b/style.css
@@ -1,88 +1,89 @@
+@font-face {
+    font-family: "iranyekan";
+    src: url("fonts/iranyekan/eot/iranyekanwebregular.eot?#"),
+        url("fonts/iranyekan/ttf/iranyekanwebregular.ttf") format('truetype'),
+        url("fonts/iranyekan/woff/iranyekanwebregular.woff") format('woff'),
+        url("fonts/iranyekan/svg/iranyekanwebregular.svg") format('svg');
+}
 
 @font-face {
-    font-family: "iranyekan" ;
-    src: url("fonts/iranyekan/eot/iranyekanwebregular.eot?#") ,
-    url("fonts/iranyekan/ttf/iranyekanwebregular.ttf") format('truetype'),
-    url("fonts/iranyekan/woff/iranyekanwebregular.woff") format('woff'),
-    url("fonts/iranyekan/svg/iranyekanwebregular.svg") format('svg');
+    font-family: "iranyekan_numbers";
+    src: url("fonts/iranyekan_numbers/eot/iranyekanwebregular(fanum).eot?#"),
+        url("fonts/iranyekan_numbers/ttf/iranyekanwebregular(fanum).ttf") format('truetype'),
+        url("fonts/iranyekan_numbers/woff/iranyekanwebregular(fanum).woff") format('woff'),
+        url("fonts/iranyekan_numbers/svg/iranyekanwebregular(fanum).svg") format('svg');
 }
-@font-face {
-    font-family: "iranyekan_numbers" ;
-    src: url("fonts/iranyekan_numbers/eot/iranyekanwebregular(fanum).eot?#") ,
-    url("fonts/iranyekan_numbers/ttf/iranyekanwebregular(fanum).ttf") format('truetype'),
-    url("fonts/iranyekan_numbers/woff/iranyekanwebregular(fanum).woff") format('woff'),
-    url("fonts/iranyekan_numbers/svg/iranyekanwebregular(fanum).svg") format('svg');
-}
-body{
+
+body {
     direction: rtl;
-    font-family: 'iranyekan_numbers','iranyekan';
+    font-family: 'iranyekan_numbers', 'iranyekan';
 }
 
 
-*{
+* {
     margin: 0;
     padding: 0;
 }
-body{
+
+body {
     direction: rtl;
 }
 
-.container{
+.container {
     /*border: 1px solid red;*/
     width: 100%;
     height: 700px;
-    background-image: -webkit-linear-gradient(-45deg,#667eea 0%,#764ba2 100%);
-    background-image: -ms-linear-gradient(-45deg,#667eea 0%,#764ba2 100%);
+    background-image: -webkit-linear-gradient(-45deg, #667eea 0%, #764ba2 100%);
+    background-image: -ms-linear-gradient(-45deg, #667eea 0%, #764ba2 100%);
 }
 
-
-.container1{
-
-}
-
-.header{
-    background-image: -webkit-linear-gradient(-45deg,#667eea 0%,#764ba2 100%);
-    background-image: -ms-linear-gradient(-45deg,#667eea 0%,#764ba2 100%);
+.header {
+    background-image: -webkit-linear-gradient(-45deg, #667eea 0%, #764ba2 100%);
+    background-image: -ms-linear-gradient(-45deg, #667eea 0%, #764ba2 100%);
     color: #fff;
     position: relative;
 }
 
-.tap-nav{
+.tap-nav {
 
     justify-content: center;
 
 }
-ul.min-meno{
+
+ul.min-meno {
 
     list-style-type: none;
     margin-top: 3px;
 
 }
-ul.min-meno li{
+
+ul.min-meno li {
     float: right;
     justify-content: center;
 
 }
-ul.min-meno:after{
+
+ul.min-meno:after {
     display: block;
     clear: both;
     content: "";
 }
 
-ul.min-meno>li>a{
+ul.min-meno>li>a {
 
     text-decoration: none;
 
 
 }
 
-ul.min-meno>li>a:link,ul.min-meno>li>a:visited{
+ul.min-meno>li>a:link,
+ul.min-meno>li>a:visited {
 
     display: block;
-    width:100%;
+    width: 100%;
     height: 30px;
     color: white;
-    font-size:15px;
+    font-size: 15px;
     border-radius: 5px;
     justify-content: center;
     text-align: right;
@@ -92,7 +93,7 @@ ul.min-meno>li>a:link,ul.min-meno>li>a:visited{
 
 }
 
-ul.min-meno>li>a:hover{
+ul.min-meno>li>a:hover {
     text-decoration: underline;
     color: darkgrey;
 
@@ -100,14 +101,14 @@ ul.min-meno>li>a:hover{
 }
 
 
-ul.min-meno>li>a>p{
+ul.min-meno>li>a>p {
 
     margin-top: 21px;
     margin-right: 10px;
 
 }
 
-ul.uli li a{
+ul.uli li a {
     text-decoration: none;
     color: darkblue;
 }
@@ -118,6 +119,7 @@ ul.uli li a{
     top: 5px;
     left: 15px;
 }
+
 h1 {
 
     font-size: 60px;
@@ -125,6 +127,7 @@ h1 {
     margin-right: 115px;
     margin-top: 85px;
 }
+
 #p {
 
     color: white;
@@ -133,6 +136,7 @@ h1 {
     margin-left: 515px;
     margin-top: 15px;
 }
+
 .start-btn {
     width: 30%;
     height: 35px;
@@ -140,7 +144,8 @@ h1 {
     margin-right: 360px;
     margin-top: 35px;
 }
-.start-btn a{
+
+.start-btn a {
     background: #fff;
     color: #333;
 
@@ -151,15 +156,15 @@ h1 {
     box-shadow: 0 0 30px 0 rgb(0 0 0 / 10%);
     text-decoration: none;
 
- }
+}
 
 .anar {
     position: absolute;
-    left:100px;
+    left: 100px;
     bottom: 0;
     width: 400px;
     height: 400px;
-    background-image: url(anar.png);
+    background-image: url(asset/img/anar.png);
     background-position: center;
     background-size: auto;
     background-repeat: no-repeat;
@@ -167,6 +172,7 @@ h1 {
     top: 280px;
 
 }
+
 .header:before {
     content: "";
     display: block;
@@ -175,7 +181,7 @@ h1 {
     max-width: 1920px;
     height: 345px;
     bottom: 0;
-    background-image: url(bg1.png);
+    background-image: url(asset/img/bg1.png);
     background-position: center;
     background-size: 1920px 345px;
     background-repeat: no-repeat;
@@ -208,12 +214,13 @@ h1 {
     top: 66px;
 }
 
-.say1{
+.say1 {
     width: 50%;
     height: 500px;
     /* border: 1px solid darkblue;*/
 }
-.say2{
+
+.say2 {
     width: 50%;
     height: 500px;
     /*border: 1px solid darkred;*/
@@ -229,43 +236,48 @@ h1 {
     margin-right: 15px;
     border-radius: 4px;
 }
-#h2{
+
+#h2 {
     margin-top: 135px;
     margin-right: 75px;
 
     color: #252525;
     font-size: 40px;
 }
-.title{
+
+.title {
     width: 100%;
 }
 
 
- h2 svg {
-    fill: rgba(184,0,40,.2);
+h2 svg {
+    fill: rgba(184, 0, 40, .2);
     width: 60px;
     height: 60px;
     margin-left: 15px;
     vertical-align: middle;
     margin-top: -10px;
 }
+
 .offer-product-img {
     width: 80%;
-    background-image: url(blob-shape.svg);
+    background-image: url(asset/img/blob-shape.svg);
     height: 520px;
     background-repeat: no-repeat;
     background-size: 650px;
     background-position: center;
     position: relative;
 }
+
 .say2 h3 {
     font-size: 38px;
     margin-bottom: 43px;
     margin-right: -32px;
     margin-top: 45px;
 }
+
 .anar-off {
-    background-image: url(anar-off.png);
+    background-image: url(asset/img/anar-off.png);
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
@@ -274,21 +286,25 @@ h1 {
     /*border: 1px solid darkblue;*/
     left: 45px;
 }
-.pad{
+
+.pad {
     width: 100%;
     /* border: 1px solid saddlebrown;*/
 
 }
+
 .anar-off s {
     margin-right: 15px;
     color: rgb(191, 191, 181);
 
 }
-.ba{
+
+.ba {
 
     position: relative;
 }
-.ba s{
+
+.ba s {
     margin-right: 105px;
     position: absolute;
     top: -100px;
@@ -297,7 +313,7 @@ h1 {
     color: darkgray;
 }
 
-.pad  h2{
+.pad h2 {
     font-size: 23px;
     margin-right: 100px;
     /* margin-top: 5px; */
@@ -305,11 +321,13 @@ h1 {
     position: absolute;
     color: red;
 }
-.pad2{
+
+.pad2 {
     display: flex;
     flex-direction: row;
 
 }
+
 .pad span {
     display: inline-block;
     color: #fff;
@@ -322,6 +340,7 @@ h1 {
     top: -70px;
     right: 243px;
 }
+
 .say2 ul {
     margin-top: 51px;
     margin-right: -11px;
@@ -331,7 +350,7 @@ h1 {
     font-size: 26px;
 }
 
-.say2  li::before {
+.say2 li::before {
     content: "";
     width: 8px;
     height: 8px;
@@ -342,6 +361,7 @@ h1 {
     margin-left: 5px;
 
 }
+
 .a3 {
     color: #b80028;
     padding: 12px;
@@ -358,18 +378,20 @@ h1 {
     /* top: -29px; */
     margin-top: 74px;
 }
-.a3:hover{
+
+.a3:hover {
 
     background-color: #b80028;
     color: white;
 }
 
-.title{
+.title {
     /*border: 1px solid darkblue;*/
     width: 50%;
     height: 30%;
 
 }
+
 .title {
     display: flex;
     justify-content: space-between;
@@ -399,12 +421,13 @@ h1 {
     max-width: 1920px;
     height: 319px;
     bottom: 0;
-    background-image: url(bg3.png);
+    background-image: url(asset/img/bg3.png);
     background-position: center;
     background-size: 1920px 319px;
     background-repeat: no-repeat;
 
 }
+
 .container2 {
     min-height: 500px;
     margin-top: -100px;
@@ -416,6 +439,7 @@ h1 {
     /* margin-right: 15px; */
     margin-right: 22px;
 }
+
 .container3 {
     min-height: 500px;
     margin-top: -100px;
@@ -427,6 +451,7 @@ h1 {
     /* margin-right: 15px; */
     margin-right: 22px;
 }
+
 .title h2::after {
     content: "";
     display: inline-block;
@@ -437,16 +462,19 @@ h1 {
     margin-right: 15px;
     border-radius: 4px;
 }
+
 .title h2 {
     margin-top: 80px;
     margin-right: 93px;
     position: relative;
     top: -62px;
 }
+
 section.top-off .title {
     margin-top: -113px;
 }
-.box{
+
+.box {
     width: calc(30% - 30px);
     background: #fff;
     border-radius: 25px;
@@ -455,43 +483,50 @@ section.top-off .title {
     margin: 29px 15px 68px;
     text-decoration: none;
 }
-.ro{
+
+.ro {
     background-color: rgb(248, 249, 249);
     /* border: 1px solid firebrick;*/
-    min-height:500px;
+    min-height: 500px;
     margin-top: -18px;
 }
+
 .img3 {
     /* border: 1px solid firebrick; */
     width: 212px;
     height: 244px;
     margin: 0 auto;
     margin-top: 14px;
-   /* border: 1px solid firebrick;*/
+    /* border: 1px solid firebrick;*/
 }
 
-.img3 img{
+.img3 img {
     width: 100%;
 }
-.matn3{
+
+.matn3 {
 
     height: 10%;
-  /*  border:1px solid fuchsia;*/
+    /*  border:1px solid fuchsia;*/
 }
-.matn3 h2{
+
+.matn3 h2 {
     text-decoration: none;
     font-size: 25px;
     color: #0f1a1b;
 }
-.matn3 h2:hover{
+
+.matn3 h2:hover {
     color: purple;
 }
+
 .matn4 del {
     font-size: 19px;
     /* margin-top: 25px; */
     color: gray;
 }
-.matn4{
+
+.matn4 {
     margin-top: 15px;
 }
 
@@ -502,10 +537,12 @@ section.top-off .title {
     /*section top off*/
 
 }
+
 .top-off .title {
     margin-top: -113px;
 
 }
+
 .takhfif {
     width: 47px;
     height: 20px;
@@ -518,13 +555,15 @@ section.top-off .title {
     margin-top: -374px;
     margin-right: 295px;
 }
-.top{
+
+.top {
     margin-top: 50px;
 }
+
 .matn5 {
-    width:100%;
+    width: 100%;
     height: 100px;
-   /* border: 1px solid darkred;*/
+    /* border: 1px solid darkred;*/
     margin: 0 auto;
     display: flex;
     flex-direction: row;
@@ -575,9 +614,9 @@ section.top-off .title {
 
 }
 
-.advantages li{
+.advantages li {
     width: 20%;
-  /* border: 1px solid saddlebrown;*/
+    /* border: 1px solid saddlebrown;*/
     height: 155px;
 }
 
@@ -586,7 +625,7 @@ section.top-off .title {
     height: 55px;
     width: 55px;
     vertical-align: -0.05em;
-    fill: rgba(184,0,40,.2);
+    fill: rgba(184, 0, 40, .2);
 }
 
 .box-title {
@@ -596,6 +635,7 @@ section.top-off .title {
     margin-top: 0;
     color: #000;
 }
+
 .box-wrapper {
     margin-right: 96px;
     margin-top: -45px;
@@ -623,7 +663,7 @@ section.top-off .title {
     max-width: 1920px;
     height: 280px;
     bottom: 0;
-    background-image: url(bg2.png);
+    background-image: url(asset/img/bg2.png);
     background-position: center;
     background-size: 1920px 280px;
     background-repeat: no-repeat;
@@ -646,7 +686,7 @@ section.top-off .title {
     width: 324px;
     height: 300px;
     margin-right: -11px;
-    background-image: url(anar-wow.png);
+    background-image: url(asset/img/anar-wow.png);
     background-position: center;
     background-size: 97% auto;
     background-repeat: no-repeat;
@@ -657,6 +697,7 @@ section.top-off .title {
     margin-right: -18px;
     font-size: 32px;
 }
+
 .box-bot {
     width: 17%;
     height: 64px;
@@ -670,7 +711,7 @@ section.top-off .title {
     margin-right: -126px;
 }
 
-.box-bot p{
+.box-bot p {
     margin-top: 15px;
 }
 
@@ -679,17 +720,17 @@ section.top-off .title {
     width: 70%;
     margin: 0 auto;
     height: 250px;
-   /* border: 1px solid darkred;*/
+    /* border: 1px solid darkred;*/
     margin-top: 119px;
 }
 
-.matn8 h2{
+.matn8 h2 {
     text-align: center;
     margin-top: 15px;
-    color:darkred ;
+    color: darkred;
 }
 
-.matn8 p{
+.matn8 p {
     text-align: center;
     margin-top: 29px;
     font-weight: bold;
@@ -701,15 +742,17 @@ ul#social-links {
     margin: 0 auto;
     padding: 0;
     list-style-type: none;
-   /* border: 1px solid navajowhite; */
+    /* border: 1px solid navajowhite; */
     align-items: center;
-     display: flex;
+    display: flex;
     justify-content: center;
     margin-top: 31px;
     gap: 15px;
 
 }
-ul#social-links>li>a:link,ul#social-links>li>a:visited{
+
+ul#social-links>li>a:link,
+ul#social-links>li>a:visited {
     display: block;
     width: 40px;
     height: 40px;
@@ -720,22 +763,28 @@ ul#social-links>li>a:link,ul#social-links>li>a:visited{
     color: white;
     font-size: 25px;
 }
-ul#social-links>li>a:hover{
+
+ul#social-links>li>a:hover {
     background-color: #848484;
 }
-ul.simple-list{
+
+ul.simple-list {
     padding: 0;
     margin: 0;
     list-style-type: none;
 }
-ul.simple-list>li{
+
+ul.simple-list>li {
     margin: 14px 0;
 }
-ul.simple-list>li>a:link,ul.simple-list>li>a:visited{
+
+ul.simple-list>li>a:link,
+ul.simple-list>li>a:visited {
     color: white;
     text-decoration: none;
 }
-ul.simple-list>li>a:hover{
+
+ul.simple-list>li>a:hover {
     color: #7d7d7d;
 }
 
@@ -745,7 +794,8 @@ ul.simple-list>li>a:hover{
     color: #333;
     padding-top: 200px;
 }
-.copyright a{
+
+.copyright a {
     text-decoration: none;
 
 }
@@ -759,14 +809,14 @@ ul.simple-list>li>a:hover{
 }
 
 
-.copyright p{
-    font-family: 'iranyekan_numbers','iranyekan';
+.copyright p {
+    font-family: 'iranyekan_numbers', 'iranyekan';
 }
 
-.a3 p{
+.a3 p {
     margin-top: -5px;
 }
 
-.p6{
+.p6 {
     margin-top: 8px;
 }
